feat: new changes updated